--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "firebase": "^6.2.4",
+    "firebase-tools": "^7.0.2",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "3.5.3"
   },
   "scripts": {
